syntax = "proto3";

import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
import "core_types.proto";

package volue.mesh.protobuf;

// The data cache service definition.
service DataCache {
  rpc GetMeshVersion(google.protobuf.Empty) returns (MeshVersionInfo) {}
}
