syntax = "proto3";

import "google/protobuf/timestamp.proto";

package volue.mesh.protobuf;

message Guid {
  // Bytes in LITTLE ENDIAN format
  bytes bytes_le = 1;
}

message UtcInterval {
  google.protobuf.Timestamp start_time = 1;
  google.protobuf.Timestamp end_time = 2;
}

message Delta {
  uint64 delta = 1; // based on std::chrono::milliseconds (TimeSpan from Mesh also uses int64 to measure time, but in "ticks")
}


message MeshVersionInfo {
  string version = 1;
  string name = 2;
  string build_date = 3;
  string commit = 4;
  string full_version = 5;
}

